syntax = "proto3";

package io.restorecommerce.ostorage;

import "google/protobuf/empty.proto";
import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";

service Service {
  rpc Get (GetRequest) returns (Object);
  rpc Put (Object) returns (Result);
  rpc Delete (DeleteRequest) returns (google.protobuf.Empty);
  rpc List (Bucket) returns (FilesInformation);
}

message Object {
  string key = 1;
  string bucket = 2;
  bytes object = 3;
  io.restorecommerce.meta.Meta meta = 4;
  string fileName =5;
  string url = 6;
  string prefix = 7;
}

message GetRequest {
  string key = 1;
  string bucket = 2;
  bool flag =3;
}

message FilesInformation {
  repeated  FileInformation file_information = 1;
}

message FileInformation {
  string file_name = 1;
  string url = 2;
  io.restorecommerce.meta.Meta meta = 3;
}

message DeleteRequest {
  string key = 1;
  string bucket = 2;
}

message Result
{
  string url = 1;
  string bucket =2 ;
  string key =3;
}
message Bucket{
  string bucket = 1;
}
