syntax = "proto3";

package io.restorecommerce.ostoragetest;

message BucketLifecycleCfg {
  string Bucket = 1;
  LifecycleConfigurationType LifecycleConfiguration = 2;
}

message LifecycleConfigurationType {
  repeated Rule Rules = 1;
}

message Rule {
  string Status = 1;
  ExpirationType Expiration = 2;
  FilterType Filter = 3;
  string ID = 4;
}

message ExpirationType {
  string Date = 1;
  int32 Days = 2;
}

message FilterType {
  string Prefix = 1;
  TagType Tag = 2;
}


message TagType {
  string Key = 1;
  string Value = 2;
}
